--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>3.3.13</version>
+        <version>3.4.9</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
     <groupId>com.travelagency</groupId>
@@ -32,6 +32,32 @@
 
     <dependencies>
         <dependency>
+            <groupId>jakarta.persistence</groupId> 
+            <artifactId>jakarta.persistence-api</artifactId> 
+            <version>3.1.0</version> 
+        </dependency>
+
+
+        <!-- ================================== -->
+        <!-- NUOVA DIPENDENZA: Spring Data JPA  -->
+        <!-- Ci permette di interagire con il DB usando oggetti Java semplici. -->
+        <!-- ================================== -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-jpa</artifactId>
+        </dependency>
+
+        <!-- ================================== -->
+        <!-- NUOVA DIPENDENZA: Driver PostgreSQL-->
+        <!-- Il "traduttore" specifico per parlare con il nostro DB PostgreSQL. -->
+        <!-- ================================== -->
+        <dependency>
+            <groupId>org.postgresql</groupId>
+            <artifactId>postgresql</artifactId>
+            <scope>runtime</scope>
+        </dependency>
+
+        <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
@@ -39,15 +65,12 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-security</artifactId>
         </dependency>
-        
-        <!-- ===================== LA VERA CORREZIONE È QUI ===================== -->
+
         <dependency>
             <groupId>io.awspring.cloud</groupId>
-            <!-- L'artifactId è stato corretto. Quello vecchio con "-config" non esiste più. -->
             <artifactId>spring-cloud-aws-starter-secrets-manager</artifactId>
         </dependency>
-        <!-- =================================================================== -->
-        
+
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-devtools</artifactId>
@@ -88,7 +111,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.13.0</version>
+                <version>3.13.0</version> <!-- Ho ridotto la versione per coerenza con quella che funzionava prima -->
                 <configuration>
                     <annotationProcessorPaths>
                         <path>
